[gd_scene load_steps=2 format=3 uid="uid://bqbvdt3xkyhfp"]

[ext_resource type="Script" uid="uid://5dpmp4fa4lbk" path="res://scenes/ui/menus/create_new_save/create_new_save.gd" id="1_qcjqi"]

[node name="CreateNewSave" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcjqi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveName" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
placeholder_text = "Enter a name for your save:"
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="PlayerName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter a player name:"

[node name="Confirm" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
